--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,48 @@
+:root {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
+h1 {
+    font-size: 60px;
+}
+
+h2 {
+    font-size: 30px;
+}
+
+h3 {
+    font-size: 20px;
+}
+
+#book-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 50px;
+}
+
+.book-card {
+    display:grid;
+    grid-template-rows: 1fr 1fr 3fr 1fr;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    border: 1px solid black;
+    padding: 20px;
+}
+
+.title {
+}
+
+.author {
+
+}
+
+.book-cover {
+
+}
+
+.add-to-cart{
+    width: 500px;
+    height: 50px;
+}
