--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,19 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+#header-nav {
+    display: grid;
+    grid-template-columns: 5fr 8fr;
+    justify-content: left;
+    align-items: center;
+}
+
+#nav-list {
+    display: flex;
+    justify-content: space-evenly;
+    list-style: none;
+}
+
 h1 {
     font-size: 60px;
 }
