--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,18 @@
     list-style: none;
 }
 
+li {
+    color: black;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:visited {
+    color: black
+}
+
 h1 {
     font-size: 60px;
 }
