--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,16 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+body {
+    padding: 0;
+    margin: 0;
+    
+}
+
+.App {
+    height: 100vh;
+}
+
 #header-nav {
     display: grid;
     grid-template-columns: 5fr 8fr;
@@ -37,6 +47,19 @@ h2 {
 
 h3 {
     font-size: 20px;
+}
+
+#homepage {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 250px;
+    height: 75%;
+}
+
+p {
+    font-size: 25px;
+    width: 300px;
 }
 
 #book-grid {
