--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 :root {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 body {
@@ -50,16 +50,20 @@ h2 {
     font-weight:400;
 }
 
+li {
+    font-size: 20px;
+}
+
 #homepage {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 250px;
-    height: 75%;
+    height: 80%;
 }
 
 p {
-    font-size: 25px;
+    font-size: 22px;
     width: 600px;
 }
 
