--- a/src/App.css
+++ b/src/App.css
@@ -125,6 +125,17 @@ p {
     padding: 20px;
 }
 
+.quantity-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.quantity {
+    flex: 1;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
 .add-to-cart{
     flex: 1;
     width: 250px;
