--- a/src/App.css
+++ b/src/App.css
@@ -152,3 +152,11 @@ p {
 .add-to-cart:active {
     border: 3px solid black;
 }
+
+#shopping-cart-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
