--- a/src/App.css
+++ b/src/App.css
@@ -179,6 +179,11 @@ p {
     align-items: center;
 }
 
+.cart-cover {
+    height: auto;
+    width: 150px;
+}
+
 .cart-quantity-input {
     width: 50%;
 }
