--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ a:visited {
 }
 
 h1 {
-    font-size: 60px;
+    font-size: 50px;
 }
 
 h2 {
@@ -52,6 +52,15 @@ h2 {
 
 li {
     font-size: 20px;
+}
+
+.underline {
+    padding-bottom: 20px;
+}
+
+.underline:hover {
+    color: #b8b8b8;
+    border-bottom: 2px solid #e1dac6;
 }
 
 #shopping-cart{
@@ -155,13 +164,26 @@ p {
 
 #button-cart-container {
     text-align: center;
+    display:grid;
+    grid-template-columns: 1fr 10fr 5fr 3fr;
 }
 
-#checkout-button, #no-items {
-    margin: 20px;
+#side-bar {
+    grid-column: 3 / 4;
+    margin-top: 100px;
 }
 
-#shopping-cart-container {
+#checkout-button {
+    margin-top: 10px;
+}
+
+#no-items {
+    margin-top: 100px;
+    font-size: 30px;
+}
+
+.shopping-cart-container {
+    grid-column: 2 / 3;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -171,12 +193,12 @@ p {
 
 .book-cart {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     width: 50%;
     border-bottom: 1px solid black;
 }
 
-.cart-title, .cart-quantity, .cart-quantity-container {
+.cart-title, .cart-price, .cart-quantity, .cart-quantity-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
